# 3DHoPD

./: CMakeLists.txt  README.md
include/: SpinImage.h~  SpinImage_H.h~
include/3DHoPD/: 3DHoPD.h
sample_data/: PeterRabbit001_0.pcd  Scene0_0.1.pcd  Scene4_0.1.pcd  Scene6_0.1.pcd  bun_zipper_0.pcd  happy_vrip_res3_0.pcd
src/: 3DHoPD.cpp  3DHoPD.cpp~  3DHoPD_robustness_to_rotations.cpp
